Fix html overflow when body has lb-disable-scrolling class

--- a/assets/css/lightbox-override.scss
+++ b/assets/css/lightbox-override.scss
@@ -6,7 +6,7 @@ layout: Stylesheet
 @import "stylesheet.css";
 
 
-html.lb-disable-scrolling {
+html:has(body.lb-disable-scrolling) {
   overflow: hidden;
 }
 
